--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
       padding: 20px 0;
     }
   </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7424523174286510"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- Header Section -->
